--- a/examples/nextjs/page-router/sample-app/package.json
+++ b/examples/nextjs/page-router/sample-app/package.json
@@ -10,20 +10,21 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
+    "@tailwindcss/postcss": "4.1.3",
     "next": "15.2.4",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/node": "22.7.3",
-    "@types/react": "18.3.9",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.13",
-    "postcss": "8.4.47",
-    "tailwindcss": "3.4.13",
-    "typescript": "5.6.2"
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "autoprefixer": "10.4.21",
+    "eslint": "9.24.0",
+    "eslint-config-next": "15.2.4",
+    "postcss": "8.5.3",
+    "tailwindcss": "4.1.3",
+    "typescript": "5.8.3"
   },
   "overrides": {
     "cross-spawn": "7.0.6",
