--- a/examples/reactjs/vite/sample-app/package.json
+++ b/examples/reactjs/vite/sample-app/package.json
@@ -6,27 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint --config eslint.config.js src",
     "preview": "vite preview"
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2",
-    "@typescript-eslint/eslint-plugin": "8.19.1",
-    "@typescript-eslint/parser": "8.19.1",
-    "@vitejs/plugin-react-swc": "3.7.2",
-    "eslint": "9.17.0",
-    "eslint-plugin-react-hooks": "5.1.0",
-    "eslint-plugin-react-refresh": "0.4.16",
-    "typescript": "5.7.2",
-    "vite": "6.0.7"
-  },
-  "overrides": {
-    "cross-spawn": "7.0.6"
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.2",
+    "@typescript-eslint/eslint-plugin": "8.29.1",
+    "@typescript-eslint/parser": "8.29.1",
+    "@vitejs/plugin-react-swc": "3.8.1",
+    "eslint": "9.24.0",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "eslint-plugin-react-refresh": "0.4.19",
+    "globals": "16.0.0",
+    "typescript": "5.8.3",
+    "vite": "6.2.5"
   }
 }
