--- a/examples/gatsby/sample-gatsby-site/package.json
+++ b/examples/gatsby/sample-gatsby-site/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
-    "gatsby": "5.14.1",
+    "dotenv": "16.4.7",
+    "gatsby": "5.14.3",
+    "gatsby-plugin-env-variables": "2.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
@@ -28,26 +30,8 @@
     "typescript": "5.7.2"
   },
   "overrides": {
-    "micromatch": "4.0.8",
-    "webpack-dev-middleware": "7.2.1",
-    "body-parser": "1.20.3",
-    "axios": "1.7.9",
-    "path-to-regexp": "0.1.12",
-    "cookie": "0.7.2",
-    "cross-spawn": "7.0.6",
-    "nanoid": "3.3.8",
-    "serialize-javascript": "6.0.2",
-    "@swc/helpers": "0.5.13",
-    "gatsby": {
-      "gatsby-cli": {
-        "pretty-error": {
-          "renderkid": {
-            "strip-ansi": {
-              "ansi-regex": "3.0.1"
-            }
-          }
-        }
-      }
-    }
+    "axios": "1.8.4",
+    "cookie": "0.7.0",
+    "path-to-regexp": "0.1.12"
   }
 }
