--- a/examples/serverless/cloudflare-worker/wrangler.toml
+++ b/examples/serverless/cloudflare-worker/wrangler.toml
@@ -6,8 +6,9 @@ compatibility_date = "2023-07-17"
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
-# [vars]
-# MY_VARIABLE = "production_value"
+[vars]
+RUDDERSTACK_WRITE_KEY = ""
+RUDDERSTACK_DATAPLANE_URL = ""
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/kv
