--- a/examples/serverless/vercel-edge/package.json
+++ b/examples/serverless/vercel-edge/package.json
@@ -10,23 +10,20 @@
   },
   "dependencies": {
     "@rudderstack/analytics-js-service-worker": "*",
-    "autoprefixer": "10.4.20",
-    "next": "15.2.4",
-    "postcss": "8.4.49",
+    "@tailwindcss/postcss": "4.1.3",
+    "autoprefixer": "10.4.21",
+    "next": "15.2.5",
+    "postcss": "8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "3.4.16"
+    "tailwindcss": "4.1.3"
   },
   "devDependencies": {
-    "typescript": "5.7.2",
-    "@types/node": "22.10.1",
+    "@types/node": "22.14.0",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
-    "eslint": "9.16.0",
-    "eslint-config-next": "15.0.4"
-  },
-  "overrides": {
-    "braces": "3.0.3",
-    "micromatch": "4.0.8"
+    "eslint": "9.24.0",
+    "eslint-config-next": "15.2.5",
+    "typescript": "5.8.3"
   }
 }
