--- a/examples/symfony/sample/composer.json
+++ b/examples/symfony/sample/composer.json
@@ -1,104 +1,108 @@
 {
-  "type": "project",
-  "license": "proprietary",
-  "minimum-stability": "stable",
-  "prefer-stable": true,
-  "require": {
-    "php": ">=7.2.5",
-    "ext-ctype": "*",
-    "ext-iconv": "*",
-    "doctrine/doctrine-bundle": "^2.10",
-    "doctrine/doctrine-migrations-bundle": "^3.2",
-    "doctrine/orm": "^2.16",
-    "phpdocumentor/reflection-docblock": "^5.3",
-    "phpstan/phpdoc-parser": "^1.24",
-    "symfony/asset": "6.4.*",
-    "symfony/console": "6.4.*",
-    "symfony/doctrine-messenger": "6.4.*",
-    "symfony/dotenv": "6.4.*",
-    "symfony/expression-language": "6.4.*",
-    "symfony/flex": "^1.17|^2",
-    "symfony/form": "6.4.*",
-    "symfony/framework-bundle": "6.4.*",
-    "symfony/http-client": "6.4.*",
-    "symfony/intl": "6.4.*",
-    "symfony/mailer": "6.4.*",
-    "symfony/mime": "6.4.*",
-    "symfony/monolog-bundle": "^3.0",
-    "symfony/notifier": "6.4.*",
-    "symfony/process": "6.4.*",
-    "symfony/property-access": "6.4.*",
-    "symfony/property-info": "6.4.*",
-    "symfony/runtime": "6.4.*",
-    "symfony/security-bundle": "6.4.*",
-    "symfony/serializer": "6.4.*",
-    "symfony/string": "6.4.*",
-    "symfony/translation": "6.4.*",
-    "symfony/twig-bundle": "6.4.*",
-    "symfony/validator": "6.4.*",
-    "symfony/web-link": "6.4.*",
-    "symfony/webpack-encore-bundle": "^2.1",
-    "symfony/yaml": "6.4.*",
-    "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.14.0"
-  },
-  "config": {
-    "allow-plugins": {
-      "composer/package-versions-deprecated": true,
-      "php-http/discovery": true,
-      "symfony/flex": true,
-      "symfony/runtime": true
+    "type": "project",
+    "license": "proprietary",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=8.2",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "doctrine/dbal": "^4.0",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/orm": "^3.3",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.1",
+        "symfony/asset": "7.2.*",
+        "symfony/console": "7.2.*",
+        "symfony/doctrine-messenger": "7.2.*",
+        "symfony/dotenv": "7.2.*",
+        "symfony/expression-language": "7.2.*",
+        "symfony/flex": "^2",
+        "symfony/form": "7.2.*",
+        "symfony/framework-bundle": "7.2.*",
+        "symfony/http-client": "7.2.*",
+        "symfony/intl": "7.2.*",
+        "symfony/mailer": "7.2.*",
+        "symfony/mime": "7.2.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/notifier": "7.2.*",
+        "symfony/process": "7.2.*",
+        "symfony/property-access": "7.2.*",
+        "symfony/property-info": "7.2.*",
+        "symfony/runtime": "7.2.*",
+        "symfony/security-bundle": "7.2.*",
+        "symfony/serializer": "7.2.*",
+        "symfony/string": "7.2.*",
+        "symfony/translation": "7.2.*",
+        "symfony/twig-bundle": "7.2.*",
+        "symfony/validator": "7.2.*",
+        "symfony/web-link": "7.2.*",
+        "symfony/webpack-encore-bundle": "^2.2",
+        "symfony/yaml": "7.2.*",
+        "twig/extra-bundle": "^3.0",
+        "twig/twig": "^3.0"
     },
-    "optimize-autoloader": true,
-    "preferred-install": {
-      "*": "dist"
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
+        "symfony/debug-bundle": "7.2.*",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^7.2",
+        "symfony/stopwatch": "7.2.*",
+        "symfony/web-profiler-bundle": "7.2.*"
     },
-    "sort-packages": true
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "App\\Tests\\": "tests/"
-    }
-  },
-  "replace": {
-    "symfony/polyfill-ctype": "*",
-    "symfony/polyfill-iconv": "*",
-    "symfony/polyfill-php72": "*"
-  },
-  "scripts": {
-    "auto-scripts": {
-      "cache:clear": "symfony-cmd",
-      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
     },
-    "post-install-cmd": [
-      "@auto-scripts"
-    ],
-    "post-update-cmd": [
-      "@auto-scripts"
-    ]
-  },
-  "conflict": {
-    "symfony/symfony": "*"
-  },
-  "extra": {
-    "symfony": {
-      "allow-contrib": false,
-      "require": "6.4.*"
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
+    },
+    "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "7.2.*"
+        }
     }
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "symfony/browser-kit": "6.4.*",
-    "symfony/css-selector": "6.4.*",
-    "symfony/debug-bundle": "6.4.*",
-    "symfony/maker-bundle": "^1.0",
-    "symfony/phpunit-bridge": "^6.3",
-    "symfony/stopwatch": "6.4.*",
-    "symfony/web-profiler-bundle": "6.4.*"
-  }
 }
