--- a/examples/symfony/sample/package.json
+++ b/examples/symfony/sample/package.json
@@ -1,12 +1,13 @@
 {
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/preset-env": "7.25.4",
-    "@symfony/webpack-encore": "4.7.0",
-    "core-js": "3.38.1",
+    "@babel/core": "7.26.10",
+    "@babel/preset-env": "7.26.9",
+    "@symfony/webpack-encore": "5.1.0",
+    "core-js": "3.41.0",
     "regenerator-runtime": "0.14.1",
-    "webpack": "5.95.0",
+    "webpack": "5.99.5",
     "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.2.1",
     "webpack-notifier": "1.15.0"
   },
   "license": "UNLICENSED",
@@ -17,13 +18,16 @@
     "watch": "encore dev --watch",
     "build": "encore production --progress"
   },
+  "name": "sample",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "keywords": [],
+  "author": "",
+  "description": "",
   "dependencies": {
     "@rudderstack/analytics-js": "*"
-  },
-  "overrides": {
-    "path-to-regexp": "0.1.12",
-    "cookie": "0.7.2",
-    "cross-spawn": "7.0.6",
-    "http-proxy-middleware": "2.0.7"
   }
 }
