--- a/examples/angular/sample-app/tsconfig.spec.json
+++ b/examples/angular/sample-app/tsconfig.spec.json
@@ -5,5 +5,5 @@
     "outDir": "./out-tsc/spec",
     "types": ["jasmine"]
   },
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": ["src/test.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
 }
