--- a/examples/integrations/Ninetailed/sample-apps/app-using-npm/package.json
+++ b/examples/integrations/Ninetailed/sample-apps/app-using-npm/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ninetailed/experience.js": "7.9.3",
+    "@ninetailed/experience.js": "7.11.1",
     "@rudderstack/analytics-js": "*",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
-    "@testing-library/user-event": "14.5.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "4.2.4"
   },
   "overrides": {
     "nth-check": "2.1.1",
-    "serialize-javascript": "6.0.2",
     "postcss": "8.4.47"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rm -rf node_modules package-lock.json dist .next",
+    "setup": "npm install"
   },
   "browserslist": {
     "production": [
@@ -35,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
