--- a/examples/nextjs/hooks/sample-app/package.json
+++ b/examples/nextjs/hooks/sample-app/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf node_modules package-lock.json .next",
+    "setup": "npm install"
   },
   "dependencies": {
     "@rudderstack/analytics-js": "*",
