--- a/examples/reactjs/hooks/sample-app/package.json
+++ b/examples/reactjs/hooks/sample-app/package.json
@@ -5,36 +5,32 @@
   "dependencies": {
     "@rudderstack/analytics-js": "*",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.1.0",
-    "@testing-library/user-event": "14.5.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "web-vitals": "4.2.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
-    "typescript": "4.9.5",
+    "@testing-library/dom": "^10.4.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.3",
-    "@types/react-dom": "19.0.2"
+    "@types/node": "22.14.0",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.2",
+    "react-scripts": "5.0.1",
+    "typescript": "5.8.3"
   },
   "overrides": {
     "nth-check": "2.1.1",
-    "braces": "3.0.3",
-    "micromatch": "4.0.8",
-    "serialize-javascript": "6.0.2",
-    "resolve-url-loader": "5.0.0",
-    "path-to-regexp": "0.1.12",
-    "cookie": "0.7.2",
-    "cross-spawn": "7.0.6",
-    "http-proxy-middleware": "2.0.7"
+    "postcss": "8.4.49"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rm -rf node_modules package-lock.json build",
+    "setup": "npm install"
   },
   "eslintConfig": {
     "extends": [
