--- a/examples/reactjs/js/sample-app/package.json
+++ b/examples/reactjs/js/sample-app/package.json
@@ -27,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rm -rf node_modules package-lock.json build",
+    "setup": "npm install"
   },
   "eslintConfig": {
     "extends": [
