--- a/examples/symfony/sample/package.json
+++ b/examples/symfony/sample/package.json
@@ -16,7 +16,9 @@
     "dev-server": "encore dev-server",
     "dev": "encore dev",
     "watch": "encore dev --watch",
-    "build": "encore production --progress"
+    "build": "encore production --progress",
+    "clean": "rm -rf node_modules package-lock.json public/build",
+    "setup": "npm install"
   },
   "name": "sample",
   "version": "1.0.0",
