--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,13 +3,13 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/" 
     schedule:
-      interval: "daily"
+      interval: "weekly"
     target-branch: "develop"
 
   - package-ecosystem: "npm"
     directory: "/" 
     schedule:
-      interval: "daily"
+      interval: "weekly"
     target-branch: "develop"
     groups:
       npm-prod-deps:
