--- a/.github/workflows/deploy-beta.yml
+++ b/.github/workflows/deploy-beta.yml
@@ -45,11 +45,44 @@ jobs:
             });
             
             if (pullRequests.length > 0) {
-              const prNumber = pullRequests[0].number.toString();
+              const pr = pullRequests[0];
+              const prNumber = pr.number.toString();
               console.log(`Found PR #${prNumber} for branch ${branch}: https://github.com/${context.repo.owner}/${context.repo.repo}/pull/${prNumber}`);
+              
+              // Check if PR is in draft state
+              if (pr.draft) {
+                core.setFailed(`PR #${prNumber} is in draft state. Please mark it as ready for review before deploying.`);
+                return;
+              }
+              
+              // Get PR reviews
+              const { data: reviews } = await github.rest.pulls.listReviews({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: prNumber
+              });
+              
+              // Check for approvals
+              const approvals = reviews.filter(review => 
+                review.state === 'APPROVED' && 
+                !reviews.some(r => 
+                  r.user.login === review.user.login && 
+                  r.id > review.id && 
+                  r.state !== 'APPROVED'
+                )
+              );
+              
+              if (approvals.length === 0) {
+                core.setFailed(`PR #${prNumber} requires at least one approval before deploying.`);
+                return;
+              }
+              
+              console.log(`PR #${prNumber} has ${approvals.length} approval(s). Proceeding with beta deployment.`);
+              console.log(`Approvals from: ${approvals.map(a => a.user.login).join(', ')}`);
+              
               core.setOutput('pr_number', prNumber);
+              core.setOutput('pr_approvals', approvals.length);
             } else {
-              console.log(`No open PR found for branch ${branch} targeting develop branch. Aborting beta deployment.`);
               core.setFailed(`No open PR found for branch ${branch} targeting develop branch`);
               core.setOutput('pr_number', '');
             }
