feat: set proper grouping hash for all errors

--- a/nx.json
+++ b/nx.json
@@ -106,5 +106,8 @@
       "{workspaceRoot}/jest.preset.js",
       "{projectRoot}/tsconfig.spec.json"
     ]
+  },
+  "tui": {
+    "autoExit": true
   }
 }
