chore: fix concurrency group issues (#2253)
* chore: fix concurrency group issues

* chore: remove workflow dispatch trigger for dev deploy workflow

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,14 +1,13 @@
 name: Deploy to Development Environment
 
 on:
-  workflow_dispatch:
   pull_request:
     branches: ['develop']
     types:
       - closed
 
 concurrency:
-  group: ${{ github.workflow }}-develop
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
